Edits to Conclusion I

--- a/writeup/writeup.Rmd
+++ b/writeup/writeup.Rmd
@@ -742,13 +742,25 @@ boot_hostvolume <- abnb_host_volume %>%
 
 We are 95% confident that the median availability for high volume hosts is between 219 to 261.025 days greater than that of low volume hosts.
 
-
-
 ## Overall Conclusion
 
 ### Conclusion for Part I
 
-Based on our research question from our proposal, we wanted to determine how location played a role in determining the price of Airbnbs in New York City. First, we summarized the sample statistics of the boroughs in New York City such as median price and number of listings to get a basic understanding of the count and distribution of price in relation to borough. After finding out that both Manhattan and Brooklyn dominated the Airbnb scene in terms of number of listings, we wanted to see how these two locations play a role in the price of Airbnbs. We predicted that Manhattan would have a higher true median price than Brooklyn because Manhattan is known from previous knowledge to be a higher-class neighborhood. So, we conducted a hypothesis test to determine if there is a true median price difference between these two boroughs. We concluded that there was sufficent evidence that Manhattan's median price is higher than Brooklyn's median price. After conducting a confidence interval for the different in true median price, we are 95% confident that the median price in Manhattan is between $55 and $65 higher than the median price in Brooklyn. We also performed linear regression to create a linear model that describes how boroughs influence price. However, before we performed our linear regression, we had to make assumptions: independence and constant variance. We could safely assume independence because we do not suspect hosts are colluding to price fix listings. However, upon performing constant variance tests, we discovered that our residual plots do not follow the form of constant variance. Therefore, we proceeded with caution. We then created a new variable called "price_case" which is a catagorical variable which indicated whether the price is at or above the median price of a listing. We then used this new variable to create a scatterplot map with color indicating median price to see how coordinates play a role in the price of Airbnbs. We concluded that Manhattan has the greatest frequency of median or above listings at 68.757%, followed by Brooklyn at 40.380%. Queens has 24.448%, Staten Island has 21.739% and the Bronx has 15.294%. Finally, we investigated last variable corresponding to location: neighbourhood. Looking into the top ten median priced neighborhoods for Airbnb's we surprisngly found that the Bronx contains the neighborhood, Eastchester, with the highest median price of $475.00.
+We found, as predicted in our hypothesis, that, to some degree, there is a relationship betweeen price and location in NYC. Specifically, listings that were closer to Manhattan tended to be higher priced.
+
+First, we took a bootstrap to find the range of true median prices of Airbnbs to get a better understanding of the pricing landscape in NYC; we were 95% confident that the population median price per night of Airbnbs in NYC is between $100.00 and $110.00. This information would allow use to compare conclusions made from smaller subsets of analysis.
+
+After finding through exploratory visualizations and statistics that Manhattan and Brooklyn dominated the Airbnb scene in terms of number of listings and price, we wanted to investigate the two boroughs further.
+
+We created a scatterplot of listings coloring them for Airbnbs below the median OR at the median/above the median price. Visually, it could be seen that red dots (Airbnbs at or more expensive than the median price) were clusered around Manhattan. Also, the red dots in other boroughs were in the part of the borough closest to Manhattan. Numerically, Manhattan had the greatest frequency of red dots at 68.757%, followed by Brooklyn at 40.380%. Queens had 24.448%, Staten Island had 21.739% and the Bronx had 15.294%. It appeared as though Manhattan's high productivity and desirability was reflected in Airbnb prices. The phrase "location, location, location" appears to hold true.
+
+To look further, we created a linear model to describe how borough influences price. However, before we performed our linear regression, we had to make assumptions: the observations had to be independent, residuals had to be randomly and nearly normally distributed (around & centered at 0), and residuals had to have constant variance. We could safely assume independence because we did not suspect hosts were colluding to price fix listings and the normality of distributions plots (once filtered for outliers) satisfied the assumptions. However, our residual plots were not consistent with constant variance. Therefore, we proceeded with caution and kept this in mind as we drew conclusions. 
+
+The results from the model showed that all the p-values were below the significance level of 0.05 so there was statistical sigificance in the model's relationship between each borough and the baseline Manhattan. Brooklyn had the closest estimate to Manhattan, so we examined that further. 
+
+From our observed sample, we found that the difference in median prices between Manhattan and Brooklyn was $60. After doing a hypothesis test and confidence interval we were 95% confident that the median price in Manhattan is between $55 and $65 higher than the median price in Brooklyn. Thus, we were able to quantify, with limitations, how much more expensive Manhattan is than what we think is the second most expensive location (Brooklyn).
+
+Finally, with neighbourhood, a part of a borough, the top ten median priced neighborhoods for Airbnb's were wrangled. Surprisngly, we found that expensive neighborhoods were in all five boroughs, not confined to one or two. If we were to do more analysis, we would investigate this further. However, we thought it was more important to focus on borough as the main location indicator given the confines of this report. 
 
 ### Conclusion For Part II
 
