--- a/writeup/writeup.Rmd
+++ b/writeup/writeup.Rmd
@@ -764,7 +764,16 @@ Finally, with neighbourhood, a part of a borough, the top ten median priced neig
 
 ### Conclusion For Part II
 
-Based on our second research question in our proposal, we wanted to see how the way in which a property is listed influences the availability of a listing. Assuming availibility is a good predictor of desirability (more availible, less desireable), we looked at how the variable “room type” affects the availability of the listing. We hypothesized that room type would be a major factor in predicting availability because our exploratory analysis showed that a shared room is likely the least desired due to the largest IQR and highest median availability of the three room types. Through our text analysis of the descriptions we found words associated with private were highly sought after. "Private" and "apartment" were highly common, indicating a private enclave, and "bedroom" indicating one's private space. In additon, our linear model predicting availability by all variables regarding listing, showed room type to be a relevant predictor. Furthermore, we decided to conduct a hypothesis test to see if availability can be explained depending on whether a host is high volume or not, where high volume indicated that a host had more than one listing, and low volume indicated a host had only one histing. We had convincing evidence to conclude that there is a difference in median availability of high volume hosts and low volume hosts. Finally, we conducted a 95% confidence interval to find the different in median availability.
+Based on our second research question in our proposal, we wanted to see how the way in which a property is listed influences the availability of a listing. Assuming availability is a good predictor of desirability (more available, less desirable) we first made a bootstrap distribution and 95% bootstrap confidence interval for the median number of available days of an Airbnb in order to better understand the range of available number of days (out of 365) and the market demand. From this we determined that we are 95% confident the median number of available days of Airbnbs in New York City is between 42 and 57 days. 
+
+Next, we performed text analysis on the description (name) written by the host because we were interested in how descriptions could influence which Airbnbs are most popular. Through our text analysis of the descriptions we found words associated with private were highly sought after. "Private" and "apartment" were highly common, indicating a private enclave, and "bedroom" indicating one's private space.
+
+We hypothesized that room type would be a major factor in predicting availability because our exploratory analysis showed that a shared room is the least desired due to the largest IQR and highest median availability of the three room types. In order to confirm this we looked at how the variable “room type” affects the availability of the listing and found through a boxplot that shared-rooms are available for the most days out of the year and private room and Entire home/apartment are almost equal with median available days around 40-45. Finally to conclude our analysis on the variable roomtype, we created a linear model that describes the influence of room type on availability with entire home/apt as our baseline. The r-squared from our linear model tells us that roughly 0.841% of the variability in median availability can be explained by the type of room of Airbnb’s in New York. Considering is a relatively small R squared value. We continued to look into other factors which might influence availability.
+
+To do this, we selected linear model to predict Airbnb availability by all relevant variables relating to the way in which the property is listed. The linear model produced did select roomtype among other variables to predict availability. From this we concluded that 10.49% of the variability in availability can be explained by the way the property is listed - the room type, minimum nights required, number of reviews the listing has, the number of listings the host has, the median price and the reviews per month.
+
+Finally, since our linear model above selected the number of listings a host has, we decided to conduct a hypothesis test to see how availability can be explained depending on whether a host is high volume or not, where high volume indicated that a host had more than one listing, and low volume indicated a host had only one listing. We had convincing evidence to conclude that there is a difference in median availability of high volume hosts and low volume hosts. Finally, we conducted a 95% confidence interval to find the different in median availability.
+
 
 
 ### Areas of Improvement
